--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,19 @@
   text-align: center;
 }
 
+body{
+  background: radial-gradient(ellipse at bottom, #262e36 0%, #3e4868 100%);
+  height: 100vh;
+  overflow: hidden;
+  /* display: flex; */
+  font-family: 'Anton', sans-serif;
+  justify-content: center;
+  align-items: center;
+  perspective: 1000px;
+  overflow: scroll;
+  color: rgb(244, 244, 244);
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
